Fixes problem with nav folder wrapping long dropdown text

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -342,8 +342,8 @@ div.widget.extendednavigation ul {
 
 		&:hover ul {
 			margin: 0;
-			width: 100%;
-			min-width: 10px;
+			width: auto;
+			padding: 0 10px;
 			background-color: @color-swatch1;
 			background-image: none;
 		}
